[project]
name = "cz-trailers"
dynamic = ["version", "readme"]
dependencies = ["commitizen"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "setuptools_scm_custom"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = "setuptools_scm_custom:custom"
local_scheme = "setuptools_scm_custom:custom_local"
version_file = "_version.py"

[tool.setuptools_scm_custom]
version_scheme = "[{tag}?{distance}==0:{next_tag}][.dev{distance}?{distance}>0]"
local_scheme = "[+{node}?{distance}>0][[+?{distance}==0:.]d{node_date}?{dirty}==True]"

[tool.commitizen]
tag_format = "$version"
version_scheme = "pep440"
version_provider = "scm"
major_version_zero = true
update_changelog_on_bump = true

[project.entry-points."commitizen.plugin"]
cz-trailers = "cz_trailers:ConventionalCommitsCzTrailers"
